# foto-util

./: .gitignore  LICENSE  README.md  pyproject.toml
src/foto_util/: __init__.py  __main__.py  appdir.py  backups.py  controller.py  fileops.py  grouping.py  hashing.py  indexer.py  meta.py  model.py  pairing.py  prune.py  safety.py  store.py  viewer.py  volume.py
tests/: conftest.py  make_fixture.py  test_backups.py  test_card_untouched.py  test_controller.py  test_fileops.py  test_grouping.py  test_indexer.py  test_meta_clockfix.py  test_pairing_hashing.py  test_prune.py  test_safety.py  test_sources.py  test_store.py  test_viewer_smoke.py
