[project]
name = "foto-util"
version = "0.1.1"
description = "Fast, local, keyboard-driven photo culling for Sony RAW+JPEG cards. Non-destructive; never alters the card's structure."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Allen Ajith" }]
keywords = ["photography", "culling", "raw", "jpeg", "arw", "sony", "exif", "photos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Viewers",
]
dependencies = [
    "PySide6>=6.6",
    "xxhash>=3.4",
    "piexif>=1.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "Pillow>=10.0",
]

[project.scripts]
foto-util = "foto_util.__main__:main"

[project.urls]
Homepage = "https://github.com/allen-ajith/foto-util"
Repository = "https://github.com/allen-ajith/foto-util"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foto_util"]

# The published package ships only the app code — no tests, no dev tooling.
# (pyproject.toml, README, and LICENSE are always included automatically.)
[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
